# sqlite_scanner

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README  README.md  borked.db  sakila-examples.sql  sqlite_scanner.cpp  test.sql  tpch-create.sqlite  tpch-export.duckdb
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: HighPriorityIssues.yml  InternalIssuesCreateMirror.yml  InternalIssuesUpdateMirror.yml  Linux.yml  MacOS.yml  MainDistributionPipeline.yml  Windows.yml  _extension_distribution.yml  main.yml
data/: emptytype.db  longvarchar.db  mixed_data_numeric.db  norowid.db
data/db/: boolean.db  borked.db  count.db  decimal.db  float.db  fts.db  giant_row_id.db  issue44.db  issue47.db  negativepk.db  rtree.db  unix_timestamp.db  zeropk.db
data/sql/: bench.sql  tpch-create.sqlite  tpch-export.duckdb
scripts/: extension-upload.sh
src/: CMakeLists.txt  sqlite_db.cpp  sqlite_extension.cpp  sqlite_scanner.cpp  sqlite_stmt.cpp  sqlite_storage.cpp  sqlite_utils.cpp  sqlite_vfs.cpp
src/include/: sqlite_db.hpp  sqlite_scanner.hpp  sqlite_scanner_extension.hpp  sqlite_stmt.hpp  sqlite_storage.hpp  sqlite_utils.hpp  sqlite_vfs.hpp
src/include/storage/: sqlite_catalog.hpp  sqlite_delete.hpp  sqlite_index.hpp  sqlite_index_entry.hpp  sqlite_insert.hpp  sqlite_options.hpp  sqlite_schema_entry.hpp  sqlite_table_entry.hpp  sqlite_transaction.hpp  sqlite_transaction_manager.hpp  sqlite_update.hpp
src/sqlite/: CMakeLists.txt  duckdbvfs.cpp  sqlite3.h
src/storage/: CMakeLists.txt  sqlite_catalog.cpp  sqlite_delete.cpp  sqlite_index.cpp  sqlite_index_entry.cpp  sqlite_insert.cpp  sqlite_schema_entry.cpp  sqlite_table_entry.cpp  sqlite_transaction.cpp  sqlite_transaction_manager.cpp  sqlite_update.cpp
test/: chinook.test  lineitem.test  sakila.test
test/lite_scanner/: borked.test  chinook.test  count_star.test  decimal.test  emptytype.test  float.test  longvarchar.test  mixed_numeric.test  sakila.test  tpch.test
test/lite_storage/: attach.test  attach_alter.test  attach_alter_constraint.test  attach_big.test_slow  attach_catalog.test  attach_checkpoint.test  attach_concurrent_clients.test  attach_constraints.test  attach_create_if_exists.test  attach_create_index.test  attach_database_list.test  attach_defaults.test  attach_delete.test  attach_describe.test  attach_detach.test  attach_drop.test  attach_explain.test  attach_httpfs.test  attach_in_memory.test  attach_keywords.test  attach_norowid.test  attach_on_conflict.test  attach_prefix.test  attach_read_only.test  attach_rowid.test  attach_schema_functions.test  attach_simple.test  attach_transactions.test  attach_types.test  attach_update.test  attach_use.test  attach_views.test  attach_zero_negative_pk.test
test/sql/scanner/: borked.test  chinook.test  count_star.test  decimal.test  emptytype.test  float.test  httpfs.test  issue44.test  longvarchar.test  mixed_numeric.test  sakila.test  tpch.test
test/sql/storage/: attach_alter.test  attach_big.test_slow  attach_catalog.test  attach_checkpoint.test  attach_concurrent_clients.test  attach_constraints.test  attach_create_if_exists.test  attach_create_index.test  attach_create_or_replace.test  attach_database_list.test  attach_defaults.test  attach_delete.test  attach_delete_issue.test  attach_describe.test  attach_detach.test  attach_drop.test  attach_explain.test  attach_giant_row_id.test  attach_in_memory.test  attach_keywords.test  attach_mixed_numeric.test  attach_norowid.test  attach_on_conflict.test  attach_options.test  attach_prefix.test  attach_read_only.test  attach_rowid.test  attach_schema_functions.test  attach_simple.test  attach_transactions.test  attach_types.test  attach_unix_timestamp.test  attach_update.test  attach_use.test  attach_views.test  attach_zero_negative_pk.test  fts.test  issue47.test  issue53.test  rtree.test
